# libedsacnetworking

./: .gitignore  Makefile  Makefile.am  Makefile.long-check  README.md  configure.ac  libedsacnetworking.pc.in  libnetworking.pc.in  template.c  template.h  test.sh  valgrind.sh
include/: edsac_arguments.h  edsac_representation.h  edsac_sending.h  edsac_server.h  edsac_timer.h  hello.h  representation.h  sending.h  server.h
src/: arguments.c  hello.c  representation.c  sending.c  server.c  timer.c
src/contrib/: cJSON.c
src/test/: hello.c  keep_alive_fail.c  keep_alive_pass.c  loud_server.c  representation.c  sending.c  sending_demo.c  server.c  system.c
